[package]
name = "rpi-secure-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = { version = "0.10", features = ["aes"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rsa = { version = "0.9", features = ["sha2"] }
